# nginx-admin

./: .gitattributes  .gitignore  AUDIT_REPORT.md  README.md  components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/rules/: architecture.mdc
.github/workflows/: daemon-deb-release.yml
api/: openapi.yaml
apps/desktop/: package.json  tsconfig.json  tsup.config.ts
apps/web/: LICENSE  components.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.js  (+5 more)
assets/: index--AtTwmxU.css  index-1Tzc2Jlt.css  index-A6FX933s.js  index-B68axS4O.css  index-BaZrciyU.css  index-BiWPm471.css  index-Brt4JOD7.js  index-C7ZHePiS.css  index-CdNIx6tm.js  index-CyvgbXgC.js  index-DJpvoYmp.css  index-DOkfCJdx.js  index-D_nJYCgR.js  index-DnBHfiJ4.js  index-VOFOii1C.js  index-kulrSpI4.js
daemon/: Cargo.toml  README.md
daemon/packaging/: install.sh  nginx-admin.env  nginx-admin.service
daemon/packaging/debian/: postinst  postrm  prerm
daemon/src/: api.rs  apply.rs  config.rs  error.rs  main.rs  model.rs  renderer.rs  state_store.rs
docs/: 00-overview.md  01-problem-statement.md  02-architecture.md  03-domain-model.md  04-apply-pipeline.md  05-legacy-migration.md  06-operational-modes.md  07-non-functional-requirements.md  08-risk-analysis.md  09-design-decisions.md  10-consistency-model.md  11-failure-model.md  CONTRIBUTING.md  ROADMAP.md  transport-flow.md
src/: App.tsx  design.tsx  index.css
state-schema/: state.schema.json
(+141 files in other folders)
