[package]
name = "nginx-admind"
version = "0.1.0"
edition = "2021"
description = "NGINX Admin control plane daemon"
license = "MIT"
repository = "https://github.com/Vlashex/nginx-admin"
readme = "README.md"

[dependencies]
axum = { version = "0.7", features = ["http1", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sha2 = "0.10"
hex = "0.4"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
fs2 = "0.4"

[package.metadata.deb]
name = "nginx-admin"
maintainer = "Vlashex"
copyright = "2026, Vlashex"
depends = "$auto, systemd, nginx"
section = "admin"
priority = "optional"
maintainer-scripts = "packaging/debian"
assets = [
  ["target/release/nginx-admind", "usr/bin/nginx-admind", "755"],
  ["packaging/nginx-admin.service", "lib/systemd/system/nginx-admin.service", "644"],
  ["packaging/nginx-admin.env", "etc/default/nginx-admin", "644"],
]
